Add basic API endpoints

--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "koa-send": "^5.0.0",
     "koa-static": "^5.0.0",
     "pg": "^7.12.1",
+    "postgres-date": "^1.0.4",
     "postgres-migrations": "^3.0.2"
   },
   "devDependencies": {
