--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,10 +31,12 @@
     "react": "16.8.6",
     "react-datetime": "2.16.3",
     "react-dom": "16.8.6",
+    "react-redux": "^7.1.1",
     "react-router": "5.0.0",
     "react-router-dom": "5.0.0",
-    "react-scripts": "3.0.0",
-    "reactstrap": "8.0.0"
+    "react-scripts": "3.0.1",
+    "reactstrap": "8.0.0",
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "@types/googlemaps": "3.30.19",
