--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "axios": "^0.19.0",
     "classnames": "2.2.6",
     "headroom.js": "0.9.4",
     "moment": "2.24.0",
