--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "react-router": "5.0.0",
     "react-router-dom": "5.0.0",
     "react-scripts": "3.0.1",
+    "react-select": "^3.0.8",
     "reactstrap": "8.0.0",
     "redux": "^4.0.4"
   },
