--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "react-scripts": "3.0.1",
     "react-select": "^3.0.8",
     "reactstrap": "8.0.0",
+    "recharts": "^1.8.5",
     "redux": "^4.0.4"
   },
   "devDependencies": {
